feat: view account information
